tests/fsharp/typecheck/sigs/neg78.bsl

neg78.fsx(3,9,3,17): typecheck error FS0751: Incomplete expression or invalid use of indexer syntax
