tests/fsharp/typecheck/sigs/neg78.fsx
module M

let x = System..

